--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>웰컴 홍대 하우스!</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <span class="header_edit"></span>
+      <span class="header_title"></span>
+    </header>
+    <section class="view">
+      <img src="" alt="" />
+      <div class="view_div">
+        <span class="view_username"></span>
+        <span class="view_preview"></span>
+      </div>
+    </section>
+  </body>
 </html>
