index html edit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta name="description" content="" />
-    <meta property="og:description" content="WelCome 홍대하우스!"."/>
+    <meta property="og:description" content="WelCome 홍대하우스!" />
     <meta property="og:image" content="./images/title.jpg" />
     <meta name="author" content="Sungchi" />
     <title>Cozy Kolon &amp;</title>
@@ -85,7 +85,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
-                  <div id="invited">You're Invited</div>
+                  <div id="invited">초대합니다 Invited</div>
 
                   <div class="banner-text withlove medium light">
                     <h1>88 동기모임</h1>
@@ -106,7 +106,8 @@
           <div
             data-stellar-ratio="0.5"
             class="slide-image"
-            style="background-image:url(./images/title.jpg);background-position:top center"
+            style="background-image:url(./images/title.jpg)"
+            )
           ></div>
           <div class="slide-overlay" style="opacity:0"></div>
         </li>
@@ -151,7 +152,7 @@
             <div class="col-md-6">
               <div class="photo-item frame-border animation fadeInLeft">
                 <img
-                  src="./images/childhood_sub.jpg"
+                  src="./images/outerworship.jpg"
                   alt=""
                   class="hover-animation image-zoom-in"
                 />
@@ -160,7 +161,7 @@
                 ></div>
               </div>
               <div class="his-her-name">
-                <h2 class="text-center">우성섭</h2>
+                <h2 class="text-center">청청피크닉</h2>
                 <div class="heart-wrapper">
                   <div class="de-icon circle medium-size custom-heart">
                     <i class="de-icon-heart"></i>
@@ -168,18 +169,18 @@
                 </div>
               </div>
               <p class="blurb animation fadeInLeft text-center">
-                1982년에 충북 괴산군에서 태어나 서울에서
-                스타트업-스타트업-창업(망하고)-스타트업의 길을 걸어왔습니다. 그
-                와중에 나를 인간으로 만들어주러 온 나의 구세주 별님을 만나 참된
-                인간으로 거듭나게 되었습니다. 별님에게 요리해주고 같이 오버워치
-                하며 무릎에 앉은 고양이를 쓰다듬어주는 것이 요즘 저의 가장 큰
-                행복입니다.
+                햇볕이 너무 따사로웠지만 <br />
+                우리의 마음과 몸은 힐링할 수 있었던,<br />
+                바로 그 시간! 청청피크닉 ;-) <br />
+                그날의 추억은 사진으로 고스란히 남았습니다 :-) 동기별 미션!
+                <br />
+                - 청라생태공원
               </p>
             </div>
             <div class="col-md-6">
               <div class="photo-item frame-border animation fadeInRight">
                 <img
-                  src="./images/childhood_byeol.jpg"
+                  src="./images/praiseworship.jpg"
                   alt=""
                   class="hover-animation image-zoom-in"
                 />
@@ -188,15 +189,13 @@
                 ></div>
               </div>
               <div class="his-her-name">
-                <h2 class="text-center">강한별</h2>
+                <h2 class="text-center">찬양집회</h2>
               </div>
               <p class="blurb animation fadeInRight text-center">
-                1989년에 서울에서 태어나 이곳저곳 이사를 다니다 결국 서울에
-                정착했습니다. 어릴 때는 IT 업계에 종사하게 될 줄 몰랐지만 했던
-                짓을 생각해보면 나름 아이티키드였던 것 같기도 하고. 평소에
-                하얗고 동그란 것을 좋아했는데 정말 하얗고 동그란 사람과 결혼하게
-                되어 무척 기쁩니다. 다정한 친구이면서 존경할 수 있는 사람을
-                만나게 되어 행운이라고 생각하고 있습니다.
+                예배가 정말 뜨거웠지만 우리가 동기라는 사실을 잊지않고,<br />
+                모였던 바로 그 시간! 찬양집회 ;-)<br />
+                그날의 추억은 사진으로 고스란히 남았습니다. :-) <br />
+                - 여름날의 찬양집회
               </p>
             </div>
           </div>
@@ -228,11 +227,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '두번째 데이트');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2017년 1차 동기모임');
                                                         "
                         href="./images/ourstory1.jpg"
                         class="magnific-zoom"
-                        title="두번째 데이트"
+                        title="2017년 1차 동기모임"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -247,24 +246,21 @@
             >
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">06</div>
-                <div class="month-year">2014</div>
+                <div class="date-only">10</div>
+                <div class="month-year">2017</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
             </div>
             <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
-              <h3>두번째 데이트</h3>
+              <h3>2017년 1차 동기모임</h3>
               <p>
-                한별: 두번째 만남에서 유기견 산책을 함께 했습니다. 이때는 옷도
-                후드짚업에 늘어난 청바지를 입고 정형돈 크로스백을 하고 와서
-                놀랐던 기억이 납니다. 강아지와 함께 어린 아이처럼 신나서
-                달려가는 모습이 인상적입니다. 원래는 강아지가 무섭다고 하셨는데
-                그 이후로 점차 강아지 공포증을 극복하고 있습니다.
+                청년부 찬양집회 덕분에 <br />
+                2017년 88동기(청년부) 동기모임 Start!
               </p>
               <p>
-                성섭: 그때 가장 편하면서도 예쁜 옷을 골랐습니다. 저 때를 계기로
-                강아지는 대부분 착하다는 것을 배웠습니다. 나쁜 것은 인간입니다.
+                바로 이날에 장년부가 된 동기들과 함께 <br />
+                동기모임을 계획하게 되는 계기가 되었던 시간
               </p>
             </div>
             <div class="vertical-line"></div>
@@ -286,11 +282,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '음악행사');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2017년 2차 동기모임');
                                                         "
                         href="./images/ourstory3.jpg"
                         class="magnific-zoom"
-                        title="음악 행사"
+                        title="2017년 2차 동기모임"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -305,8 +301,8 @@
             >
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">10</div>
-                <div class="month-year">2015</div>
+                <div class="date-only">12</div>
+                <div class="month-year">2017</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -314,18 +310,14 @@
             <div
               class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight"
             >
-              <h3>음악 행사</h3>
+              <h3>2017년 2차 동기모임</h3>
               <p>
-                한별: 음악 페스티벌에 같이 가본 뒤로 재미를 붙여 렛츠락
-                페스티벌에 갔습니다. 음악 페스티벌을 고르는 기준은 장기하와
-                얼굴들이 출연하느냐 입니다. 성섭님은 장기하와 얼굴들 정도가
-                아니면 상대를 안 하십니다. 장기하와 얼굴들이 나오기 전까지는
-                계속 주무시기만 하지만 괜찮아요. 자장가로 들으신 거니까요.
+                핸니 하우스로 초대받은 날!
               </p>
               <p>
-                성섭: 날씨 좋을 때 가는 음악 페스티벌은 누워서 간식먹고 바로
-                낮잠자기 좋습니다. 비오는 날 갔던 자라섬 무슨 페스티벌이
-                생각납니다. 비가 오는데도 낮잠은 잤습니다.
+                오랜세월을 함께 보낸 동기들도<br />
+                이제야 서로를 알게된 동기들도<br />
+                모두가 하나가 되었던 동기모임
               </p>
             </div>
             <div class="vertical-line"></div>
@@ -347,11 +339,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '여행');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2018년 1차 동기모임');
                                                         "
                         href="./images/ourstory2.jpg"
                         class="magnific-zoom"
-                        title="여행"
+                        title="2018년 1차 동기모임"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -366,14 +358,14 @@
             >
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">05</div>
-                <div class="month-year">2016</div>
+                <div class="date-only">02</div>
+                <div class="month-year">2018</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
             </div>
             <div class="col-md-4 animation delay1 fadeInRight">
-              <h3>여행</h3>
+              <h3>2018년 1차 동기모임</h3>
               <p>
                 한별: 함께 일본 오사카와 교토로 여행을 갔습니다. 여행 내내
                 성섭님은 매우 수줍어 하셨지만 마지막에는 스스로 음식 주문도 할
