--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta name="description" content="" />
     <meta property="og:description" content="WelCome 홍대하우스!" />
+
     <meta property="og:image" content="./images/title.jpg" />
     <meta name="author" content="Sungchi" />
+
     <title>Cozy Kolon &amp;</title>
-    <link rel="icon" href="images/favicon.jpg" />
+    <link rel="icon" href="images/icons8-88-filled-50.png" />
     <link
       rel="stylesheet"
       href="css/bootstrap/bootstrap.min.css"
@@ -59,7 +61,6 @@
       rel="stylesheet"
       type="text/css"
     />
-
     <link
       href="https://fonts.googleapis.com/css?family=Pacifico"
       rel="stylesheet"
@@ -67,6 +68,7 @@
     />
     <link href="css/style.css" rel="stylesheet" media="screen" />
   </head>
+
   <body class="outside-bottom-bar-page">
     <div id="preloader">
       <div class="alignment">
@@ -85,7 +87,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
-                  <div id="invited">초대합니다 Invited</div>
+                  <div id="invited">초대합니다</div>
 
                   <div class="banner-text withlove medium light">
                     <h1>88 동기모임</h1>
@@ -102,12 +104,14 @@
         </div>
       </div>
       <ul class="slides">
-        <li>
+        <li
+          class="flex-active-slide"
+          style="width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;"
+        >
           <div
             data-stellar-ratio="0.5"
             class="slide-image"
-            style="background-image:url(./images/title.jpg)"
-            )
+            style="background-image: url(images/title.jpg); background-position: center top; top: 0px; display: block;"
           ></div>
           <div class="slide-overlay" style="opacity:0"></div>
         </li>
@@ -206,7 +210,9 @@
           <div class="row">
             <div class="col-sm-12 col-md-offset-2 col-md-8 text-center">
               <div class="section-title animation fadeInUp">
-                <h2>우리 <img src="images/heart-icon.png" alt="" /> 이야기</h2>
+                <h2>
+                  우리 <img src="images/icons8-88-50.png" alt="" /> 이야기
+                </h2>
               </div>
             </div>
           </div>
@@ -366,19 +372,8 @@
             </div>
             <div class="col-md-4 animation delay1 fadeInRight">
               <h3>2018년 1차 동기모임</h3>
-              <p>
-                한별: 함께 일본 오사카와 교토로 여행을 갔습니다. 여행 내내
-                성섭님은 매우 수줍어 하셨지만 마지막에는 스스로 음식 주문도 할
-                수 있게 되셨습니다. 일본 여행에서 기억에 남는 것은 로프트라고
-                하시는 성섭님. 이쁜 것이 많아서 좋았다고 하십니다. 우리는
-                오사카에 더 오래 있었지만 성섭님은 교토가 더 좋다고 하셨습니다.
-              </p>
-              <p>
-                성섭: 공공연한 비밀이지만 저는 여행을 싫어합니다. 비 오는 교토는
-                너무나 아름다웠습니다. 그때 찍었던 사진을 한일 교류 사진전에
-                출품했는데 탈락했습니다. 별님과 여행계획을 세우고 함께
-                돌아다니는 것은 저의 두번째 행복입니다.
-              </p>
+              <p></p>
+              <p></p>
             </div>
             <div class="vertical-line"></div>
           </div>
@@ -399,11 +394,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '마스터');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2018년 2차 동기모임');
                                                         "
                         href="./images/ourstory4.jpg"
                         class="magnific-zoom"
-                        title="마스터"
+                        title="2018년 2차 동기모임"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -427,7 +422,7 @@
             <div
               class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight"
             >
-              <h3>마스터</h3>
+              <h3>2018년 2차 동기모임</h3>
               <p>
                 한별: 남들 다 갈 때 못 가다가 뒤늦게 속초에 포켓몬을 잡으러
                 갔습니다. 포켓몬 좋아하지도 않으면서 왜 속초까지 가냐고 하셨던
@@ -713,7 +708,9 @@
           <div class="row">
             <div class="col-md-offset-2 col-md-8 text-center">
               <div class="section-title animation fadeInUp">
-                <h2>우리 <img src="images/heart-icon.png" alt="" /> 갤러리</h2>
+                <h2>
+                  우리 <img src="images/icons8-88-50.png" alt="" /> 갤러리
+                </h2>
               </div>
             </div>
           </div>
