--- a/index.html
+++ b/index.html
@@ -126,10 +126,9 @@
               <a href="index.html">
                 <div class="css-logo rounded">
                   <div class="css-logo-text">
-                    <strong>8</strong><i class="de-icon-heart-1"></i
-                    ><strong>8</strong>
-                  </div>
-                </div></a
+                    <strong>8</strong><strong>8</strong
+                    ><i class="de-icon-heart-1"></i>
+                  </div></div></a
               ><!-- IMG LOGO 
                                             <div class="img-logo">
                                               <img src="images/slide1.jpg"> </div>-->
@@ -608,9 +607,7 @@
             <div class="col-md-12 animation fadeIn">
               <img
                 src="./images/map.jpg"
-                style="width: 100%;
-                                                         margin-bottom:20px;
-                                                        "
+                style="width: 100%; margin-bottom:20px;"
               />
               <div
                 class="de-icon circle small-size inline"
