--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div id="preloader">
       <div class="alignment">
         <div class="v-align center-middle">
-          <div class="heart-animation"><i class="de-icon-heart"></i></div>
+          <div class="heart-animation"><i class="de-icon-music"></i></div>
           <div class="heart-animation-reverse">
-            <i class="de-icon-heart"></i>
+            <i class="de-icon-music"></i>
           </div>
         </div>
       </div>
@@ -85,26 +85,26 @@
         <div class="slide-title-inner-wrapper">
           <div class="slide-title">
             <div class="container">
-              <div class="row">
-                <div
-                  class="col-md-offset-3 col-md-6 animation delay1 fadeInUp shadowArea"
-                >
-                  <div id="invited">초대합니다</div>
+              <div class="row"></div>
+              <div
+                class="col-md-offset-3 col-md-6 animation delay1 fadeInUp shadowArea"
+              >
+                <div id="invited">초대합니다</div>
 
-                  <div class="banner-text withlove medium light">
-                    <h1>88 동기모임</h1>
-                  </div>
-                  <div id="banner-date">
-                    - 2019.03.03 오후 6시 30분 -
+                <div class="banner-text withlove medium light">
+                  <h1>88 동기모임</h1>
+                </div>
+                <div id="banner-date">
+                  - 2019.03.03 오후 6시 30분 -
 
-                    <br />이번엔 대근이네 집!-
-                  </div>
+                  <br />이번엔 대근이네 집!-
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- </div> -->
       <ul class="slides">
         <li
           class="flex-active-slide"
@@ -113,7 +113,7 @@
           <div
             data-stellar-ratio="0.5"
             class="slide-image"
-            style="background-image: url(images/title.jpg); background-position: center top; top: 0px; display: block;"
+            style="background-image: url(./images/title.jpg); background-position: center top; top: 0px; display: block;"
           ></div>
           <div class="slide-overlay" style="opacity:0"></div>
         </li>
@@ -129,7 +129,7 @@
                 <div class="css-logo rounded">
                   <div class="css-logo-text">
                     <strong>8</strong><strong>8</strong
-                    ><i class="de-icon-heart-1"></i>
+                    ><i class="de-icon-music-1"></i>
                   </div></div></a
               ><!-- IMG LOGO 
                                             <div class="img-logo">
@@ -169,7 +169,7 @@
                 <h2 class="text-center">청청피크닉</h2>
                 <div class="heart-wrapper">
                   <div class="de-icon circle medium-size custom-heart">
-                    <i class="de-icon-heart"></i>
+                    <i class="de-icon-music"></i>
                   </div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
             <div class="col-sm-12 col-md-4 col-md-push-6 text-center">
               <div class="photo-item frame-border animation delay1 fadeInLeft">
                 <img
-                  src="./images/ourstory3.jpg"
+                  src="./images/ourstory2.jpg"
                   alt=""
                   class="hover-animation image-zoom-in"
                 />
@@ -291,7 +291,7 @@
                       <a
                         onclick="ga('send', 'event', '스토리', '클릭', '2017년 2차 동기모임');
                                                         "
-                        href="./images/ourstory3.jpg"
+                        href="./images/ourstory2.jpg"
                         class="magnific-zoom"
                         title="2017년 2차 동기모임"
                       >
@@ -333,7 +333,7 @@
             <div class="col-md-offset-1 col-md-4 text-center">
               <div class="photo-item frame-border animation delay1 fadeInLeft">
                 <img
-                  src="./images/ourstory2.jpg"
+                  src="./images/ourstory3.jpg"
                   alt=""
                   class="hover-animation image-zoom-in"
                 />
@@ -346,11 +346,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '2018년 1차 동기모임');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2017년 크리스마스파티');
                                                         "
-                        href="./images/ourstory2.jpg"
+                        href="./images/ourstory3.jpg"
                         class="magnific-zoom"
-                        title="2018년 1차 동기모임"
+                        title="2017년 크리스마스파티"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -365,15 +365,18 @@
             >
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">02</div>
-                <div class="month-year">2018</div>
+                <div class="date-only">12</div>
+                <div class="month-year">2017</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
             </div>
             <div class="col-md-4 animation delay1 fadeInRight">
-              <h3>2018년 1차 동기모임</h3>
-              <p></p>
+              <h3>2017년 크리스마스파티</h3>
+              <p>
+                크리스마스 파티를 마치고<br />
+                동기들끼리 찰칵!
+              </p>
               <p></p>
             </div>
             <div class="vertical-line"></div>
@@ -395,11 +398,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '2018년 2차 동기모임');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2018년 1차 동기모임');
                                                         "
                         href="./images/ourstory4.jpg"
                         class="magnific-zoom"
-                        title="2018년 2차 동기모임"
+                        title="2018년 1차 동기모임"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -414,8 +417,8 @@
             >
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">09</div>
-                <div class="month-year">2016</div>
+                <div class="date-only">02</div>
+                <div class="month-year">2018</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -423,19 +426,14 @@
             <div
               class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight"
             >
-              <h3>2018년 2차 동기모임</h3>
+              <h3>2018년 1차 동기모임</h3>
               <p>
-                한별: 남들 다 갈 때 못 가다가 뒤늦게 속초에 포켓몬을 잡으러
-                갔습니다. 포켓몬 좋아하지도 않으면서 왜 속초까지 가냐고 하셨던
-                성섭님이 제일 좋아하셨습니다. 포켓몬 알을 까기 위해 평소보다
-                훨씬 많이 걸으시던 성섭님. 포켓몬 마스터가 되려고 열심히
-                노력하시던 모습이 기억에 많이 남습니다.
+                선하하하우스로 초대받은 날!
               </p>
               <p>
-                성섭: 저는 여행을 별로 안좋아하지만 별님과 함께 가는 여행은 아주
-                좋아합니다. 포켓몬도 별로 안좋아하지만 하루동안 300마리쯤 잡았던
-                기억이 있습니다. 숙소가 정말 좋았지만 별님이 알려주지 말라고
-                했습니다. 포켓몬고의 한국 출시를 축하합니다.
+                오랜만에 보는 얼굴과<br />
+                탁월한 레크레이션으로<br />
+                웃음꽃 가득했던 동기모임
               </p>
             </div>
             <div class="vertical-line"></div>
@@ -457,11 +455,11 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
                       <a
-                        onclick="ga('send', 'event', '스토리', '클릭', '집 꾸미기');
+                        onclick="ga('send', 'event', '스토리', '클릭', '2018년 2차 동기모임');
                                                         "
                         href="./images/ourstory5.jpg"
                         class="magnific-zoom"
-                        title="집 꾸미기"
+                        title="2018년 2차 동기모임"
                       >
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i></div
@@ -483,19 +481,13 @@
               <div class="clearboth"></div>
             </div>
             <div class="col-md-4 animation delay1 fadeInRight">
-              <h3>집 꾸미기</h3>
+              <h3>2018년 2차 동기모임</h3>
               <p>
-                한별: 집을 먼저 얻게 되어 조금 일찍 이사를 했습니다. 직접 페인트
-                색을 골라서 칠하고, 몰딩도 칠하는 등 나름대로 깔끔하게
-                정돈하려고 노력했습니다. 이제는 편안하고 행복한 우리집이라는
-                생각이 드네요!
+                청년부 찬양집회전 함께모여<br />
+                동기장이 찍어주는 셀카로<br />
+                몰려드는 동기모임!
               </p>
-              <p>
-                성섭: 저는 집을 꾸미는 심즈를 별로 안좋아지만 별님과 함께하는 집
-                꾸미기는 정말 재밌고 보람있었습니다. 특히 벤자민 무어 페인트는
-                훌륭한 친환경 페인트입니다. (강추) 사진을 확대하면 고양이가
-                보입니다.
-              </p>
+              <p></p>
             </div>
             <div class="vertical-line"></div>
           </div>
@@ -535,8 +527,8 @@
             >
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">12</div>
-                <div class="month-year">2016</div>
+                <div class="date-only">01</div>
+                <div class="month-year">2019</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -544,30 +536,23 @@
             <div
               class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight"
             >
-              <h3>프로포즈</h3>
+              <h3>2019년 1월 청년부MT</h3>
               <p>
-                한별: 잠깐 집을 비웠다가 돌아와보니 저녁 식사와 함께 꽃다발,
-                아이패드를 주셔서 깜짝 놀랐습니다. 말로만 프로포즈 준비한다고
-                하시고 결국 안 하실 줄 알았기 때문에 더 큰 감동이었습니다. 어째
-                집에 언제 돌아오냐고 계속 물으시던 게 생각납니다.
+                청년부 MT 둘째날<br />
+                동기끼리 모여서 찰칵!
               </p>
-              <p>
-                성섭: 프로포즈에 대한 의미를 이해하는데 1년 정도 걸렸습니다.
-                저는 프로포즈의 목적을 깨달은 순간 별님에게 뭐가 필요한지도 알게
-                되었습니다. 주변에서는 다 반지를 하지않으면 후회한다고 했지만
-                결국 내가 맞았습니다. 사랑합니다.
-              </p>
+              <p></p>
             </div>
             <div class="vertical-line"></div>
           </div>
           <div class="row">
             <div class="col-md-12 text-center">
               <div id="end-of-story" class="animation fadeInUp">
-                <h2>그리고 드디어 결혼을 하게 되었습니다.</h2>
+                <h2>그리고 2019년 첫 동기모임을 시작합니다.</h2>
                 <div class="heart-divider">
                   <span class="grey-line"></span>
-                  <i class="de-icon-heart pink-heart"></i>
-                  <i class="de-icon-heart grey-heart"></i>
+                  <i class="de-icon-music pink-heart"></i>
+                  <i class="de-icon-music grey-heart"></i>
                   <span class="grey-line"></span>
                 </div>
               </div>
@@ -596,11 +581,11 @@
             <div class="col-md-12 text-center">
               <div class="banner-text dark full animation fadeIn">
                 <div class="row">
-                  <div class="col-md-4"><h3>2017년 2월 25일</h3></div>
+                  <div class="col-md-4"><h3>2019년 03월 03일</h3></div>
                   <div class="col-md-4">
-                    <div class="border-column"><h3>오후 1시 30분</h3></div>
+                    <div class="border-column"><h3>오후 06시 30분</h3></div>
                   </div>
-                  <div class="col-md-4"><h3>해군호텔 W웨딩홀</h3></div>
+                  <div class="col-md-4"><h3>작전역 2번출구 무한낙지</h3></div>
                 </div>
               </div>
             </div>
@@ -615,83 +600,26 @@
                 class="de-icon circle small-size inline"
                 style="background-color:#f0394d"
               >
-                <i class="de-icon-address"></i>
+                <i class="de-icon-spoon"></i>
               </div>
-              <h3 class="inline">오시는 길</h3>
+              <h3 class="inline">식사 장소 안내</h3>
               <ul>
-                <li>
-                  (140-750) 서울특별시 영등포구 가마산로 540 ( 신길7동
-                  101-1번지)
-                </li>
-                <li>TEL 02.841.4114</li>
-                <li>FAX: 02.842.2646</li>
+                <li>주소 인천 계양구 봉오대로 685</li>
+                <li>TEL 032.544.8555</li>
               </ul>
               <div
                 class="de-icon circle small-size inline"
                 style="background-color:#f6700e"
               >
-                <i class="de-icon-truck"></i>
+                <i class="de-icon-coffee"></i>
               </div>
-              <h3 class="inline">무료 셔틀버스</h3>
+              <h3 class="inline">음료 장소 안내</h3>
               <ul>
                 <li>
-                  1호선 대방역3번출구 / 7호선 보라매역 5번출구로 나오셔서
-                  셔틀버스를 타시면됩니다.
+                  주소 인천 계양구 봉오대로 691번길 4 <br />
+                  코오롱아파트 103동 202호
                 </li>
-                <li>
-                  결혼식 있을때만 운행하며, 예식시간 1시간30분 전부터
-                  10분-15분간격 운행합니다.
-                </li>
-              </ul>
-              <div
-                class="de-icon circle small-size inline"
-                style="background-color:#0d9a48"
-              >
-                <i class="de-icon-rebel"></i>
-              </div>
-              <h3 class="inline">지하철</h3>
-              <ul>
-                <li>
-                  1호선: 대방역 4,5번 출구에서 100m 지점 김재규경찰학원앞
-                  마을버스 (07번 06번) 이용
-                </li>
-                <li>
-                  7호선: 보라매역 - 도보이용 (500m), 택시이용 -8번출구
-                  (기본요금)
-                </li>
-                <li>
-                  도보: 5번출구에서 200m 지나 우신시장 삼거리에서 우회전,
-                  300m직진
-                </li>
-              </ul>
-              <div
-                class="de-icon circle small-size inline"
-                style="background-color:#9400d3"
-              >
-                <i class="de-icon-cab"></i>
-              </div>
-              <h3 class="inline">승용차</h3>
-              <ul>
-                <li>
-                  시흥대로 방면에서 오시는 경우: 강남중학교 앞 사거리에서
-                  좌회전이 안되므로 서울지방 병무청앞에서 유(u)턴을 해서 70m지나
-                  사거리에 이정표(신풍시장) 방면으로 우회전 - 직진- 지하차도
-                  통과 하지마시고 옆길(3차선)을 이용하여 올라옴
-                </li>
-                <li>
-                  강남중학교/신풍시장(사러가쇼핑)에서 오시는 경우: 해군호텔 앞
-                  지하차도를 통과하지 마시고 지하차도 옆길(3차선)을 이용하여
-                  올라오시면 됨
-                </li>
-                <li>
-                  경부고속도로 이용시: 한남 IC 김포공항방향 직진 - 여의도 진입 -
-                  원효대교 밑 좌회전- 대방로 직진( 지하차도 통과후 1.2km) -
-                  옛해군 본부 앞 사거리에서 (신풍시장)우회전
-                </li>
-                <li>
-                  중부고속도로 이용시: 상일 IC - 김포공항방향 직진- 여의도
-                  진입후 상기 동일코스로 이동
-                </li>
+                <li></li>
               </ul>
             </div>
             <!-- 
@@ -702,7 +630,7 @@
           </div>
         </div>
       </section>
-      <section id="gallery-section">
+      <!-- <section id="gallery-section">
         <div class="container">
           <div class="row">
             <div class="col-md-offset-2 col-md-8 text-center">
@@ -986,23 +914,23 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section id="rsvp-section">
         <div class="container">
           <div class="row">
             <div class="col-md-offset-2 col-md-8 text-center">
               <div class="section-title animation fadeInUp">
-                <h2>고맙습니다.</h2>
+                <h2>초대합니다.</h2>
                 <p>
                   <a
                     onclick="ga('send', 'event', '페이스북 이벤트 페이지', '링크 클릭');
                                                         "
                     target="_blank"
-                    href="https://www.facebook.com/events/153683578462761/"
+                    href="https://goo.gl/forms/inuaoELlthLvVCk63"
                     style="text-decoration: underline;
                                                         color:#37A4FF;
                                                         "
-                    >페이스북 이벤트에 댓글 달기</a
+                    >참여 여부 남기기</a
                   >
                 </p>
               </div>
@@ -1032,15 +960,15 @@
                   </div>
                   <div class="heart-divider animation delay1 fadeInUp">
                     <span class="white-line"></span>
-                    <i class="de-icon-heart pink-heart"></i>
-                    <i class="de-icon-heart white-heart"></i>
+                    <i class="de-icon-music pink-heart"></i>
+                    <i class="de-icon-music white-heart"></i>
                     <span class="white-line"></span>
                   </div>
                   <div
                     id="footer-couple-name"
                     class="animation delay1 fadeInUp"
                   >
-                    한별 & 성섭
+                    언제나 즐거운 88 동기 모임
                   </div>
                 </div>
               </div>
