--- a/index.html
+++ b/index.html
@@ -606,6 +606,7 @@
               <ul>
                 <li>주소 인천 계양구 봉오대로 685</li>
                 <li>TEL 032.544.8555</li>
+                <li>회비는 식비만큼!</li>
               </ul>
               <div
                 class="de-icon circle small-size inline"
