index.html edit

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
               >
                 <i class="de-icon-coffee"></i>
               </div>
-              <h3 class="inline">음료 장소 안내</h3>
+              <h3 class="inline">모임 장소 안내</h3>
               <ul>
                 <li>
                   주소 인천 계양구 봉오대로 691번길 4 <br />
